# albricias

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn_config.py  models.py  pyproject.toml  wsgi.py
app/: __init__.py  auth.py  config.py  extensions.py  helpers.py
app/models/: __init__.py  article.py  edition.py  github_activity.py  service_activity.py  service_token.py
app/routes/: __init__.py  admin.py  api.py  compose.py  public.py
app/services/: ai_writer.py  github.py  spotify.py
app/templates/: 404.html  archive.html  article.html  base.html  issue.html  issue_nav.html  issue_v1.html  issue_v2.html  issue_v3.html  issue_v4.html  issue_v5.html
content/articles/: 2023-10-10-jazz-festival-2.md  2023-10-23-global-markets.md  2023-10-24-zoning-reform.md  2023-10-27-linux-repo.md  2023-10-30-historic-building-saved.md  2023-10-30-museum-exhibit-opens.md  2023-10-31-weather-pattern-shift.md  2023-11-05-new-park-opens.md  2023-11-05-old-factory-renovated.md  2023-11-06-traffic-congestion-ease.md  2023-11-08-hospital-wing-added.md  2023-11-11-local-jazz-scene-explodes.md  2023-11-11-new-library-functionality.md  2023-11-12-urban-planning-shift.md  2023-11-13-historic-building-saved.md  2023-11-14-metro-line-extension.md  (+17 more)
scripts/: generate_content.py  migrate_md_to_db.py
services/: ai_writer.py  github.py
templates/: 404.html  archive.html  article.html  base.html  compose.html  home.html  issue.html  issue_nav.html  issue_v1.html  issue_v2.html  issue_v3.html  issue_v4.html  issue_v5.html  login.html
(+28 files in other folders)
