[project]
name = "albricias"
version = "0.1.0"
description = "A vintage newspaper-style web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pillow>=10.0.0",
]

